@@ -25,7 +25,7 @@
 #	o man format reference manual.
 #	o texinfo format reference manual.
 #
-@HEADER	HTAGS,9,May 2002,GNU Project
+@HEADER	HTAGS,14,Jun 2002,GNU Project
 @NAME	htags - generate hypertext from source code.
 @SYNOPSIS
 	@name{htags} [-a][-c][-f][-F][-m][-n][-o][-s][-v][-w][-d @arg{dir}][-S @arg{dir}][-t @arg{title}][@arg{dir}]
@@ -71,6 +71,9 @@
 		The format is readable by @xref{btreeop,1}.
 	@item{@option{-n}, @option{--line-number}}
 		Print the line numbers. By default, doesn't print it.
+	@item{@option{--no-javascript}
+		Doesn't put javascript code.
+		By default, @name{htags} put javascript code.
 	@item{@option{-o}, @option{--other}}
 		Pick up not only source files but also other files except for
 		binary files.
@@ -174,6 +177,8 @@
 		List tags using table tag. The default is false.
 	@item{@code{normal_suffix}(string)}
 		Suffix for normal html file. The default is 'html'.
+	@item{@code{no_javascript}
+		Doesn't put javascript code. By default, @name{htags} put javascript code.
 	@item{@code{gzipped_suffix}(string)}
 		Suffix for compressed html file. The default is 'ghtml'.
 	@item{@code{script_alias}(string)}
