@@ -24,6 +24,7 @@ Current version - **** ** ****, by Shigio Yamaguchi
 
 * htags: -m(--main-func) option added.
 * htags: --style-sheet=<style file> option added.
+* htags: --no-javascript option and no_javascript config variable added.
 * htags: -g(--gtags) option added.
 * gctags: --langmap option added.
 * gozilla: -f option added.
